responsive aplicado a los componentes restantes

--- a/src/translations/english/global.json
+++ b/src/translations/english/global.json
@@ -41,7 +41,7 @@
     },
     "contact": {
         "title": "Contact",
-        "description": "Feel free to contact me and chat about a freelance job, or in a company, or just... chat! 😄",
+        "description": "Feel free to contact me and talk about a freelance job, or in a company, or just.. chat! 😄",
         "email": "Send me an e-mail",
         "linkedin": "Contact me on LinkedIn",
         "github": "Follow me on GitHub",
