--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -41,7 +41,7 @@
     },
     "contact": {
         "title": "Contacto",
-        "description": "Sientete libre de comunicarte conmigo y charlar sobre algún trabajo freelance, o en empresa, o simplemente..¡charlar! 😄",
+        "description": "Siéntete libre de comunicarte conmigo y conversar sobre algún trabajo freelance, o en empresa, o simplemente..¡charlar! 😄",
         "email": "Envíame un e-mail",
         "linkedin": "Contáctame por LinkedIn",
         "github": "Sigueme en GitHub",
