--- a/src/translations/english/global.json
+++ b/src/translations/english/global.json
@@ -14,8 +14,8 @@
     "about": {
         "aboutMe": "About Me",
         "who": "Who Am I :",
-        "description": "A tech passionate and React Web Developer.",
-        "description2": "I am located in Buenos Aires, Argentina. I have a passion for creating and building dynamic and user-friendly websites and web applications. With my problem-solving skills and attention to detail, I'm able to troubleshoot and debug complex issues, ensuring that the projects are delivered on time and to the highest quality. I'm a team player and enjoy collaborating with others to find creative solutions to challenges.",
+        "description": "A tech fan and React Web Developer.",
+        "description2": "I am located in Buenos Aires, Argentina. I have a great passion for creating and building dynamic and user-friendly websites and web applications. With my problem-solving skills and attention to detail, I'm able to troubleshoot and debug complex issues, ensuring that the projects are delivered on time and to the highest quality. I'm a team player and enjoy collaborating with others to find creative solutions to challenges.",
         "download": "Download CV",
         "skills": "My skills :"
     },
