--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -12,7 +12,7 @@
         "profession": "- Desarrollador Frontend -"
     },
     "about": {
-        "aboutMe": "Acerca de mi",
+        "aboutMe": "Acerca de mí",
         "who": "Quien soy :",
         "description": "Un admirador de la tecnología y Desarrollador Web React.",
         "description2": "Me encuentro ubicado en Buenos Aires, Argentina. Tengo una gran pasión por crear sitios y aplicaciones web dinámicas y fáciles de usar. Cuento con habilidades de resolución de problemas y atención al detalle, capaz de solucionar y depurar problemas complejos, asegurando que los proyectos se entreguen a tiempo y con la máxima calidad. Soy un jugador de equipo y disfruto colaborar con otros para encontrar soluciones creativas a los desafíos.",
