--- a/src/translations/english/global.json
+++ b/src/translations/english/global.json
@@ -9,7 +9,7 @@
     "banner": {
         "greeting": "Hi !",
         "name": "I'm Franco Buceta",
-        "profession": "- Frontend Developer -"
+        "profession": "- FullStack Developer -"
     },
     "about": {
         "aboutMe": "About Me",
