--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -9,7 +9,7 @@
     "banner": {
         "greeting": "¡ Hola !",
         "name": "Soy Franco Buceta",
-        "profession": "- Desarrollador Frontend -"
+        "profession": "- Desarrollador FullStack -"
     },
     "about": {
         "aboutMe": "Acerca de mí",
