--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -24,7 +24,27 @@
         "website": "Sitio Web",
         "repository": "Repositorio",
         "typeWork": "Trabajo",
-        "typeEducation": "Educación"
+        "typeEducation": "Educación",
+        "projects": {
+            "1Title": "Sitio web informativo con múltiples páginas que muestra una amplia gama de vehículos con descripciones detalladas, especificaciones e imágenes, brindando a los usuarios una experiencia de navegación atractiva y completa.",
+            "1Features": ["Diseño moderno y atractivo", "Formulario de contacto", "Panel de administración", "Desarrollada siguiendo los lineamientos de la marca Ford"],
+            "2Title": "Plataforma web que conecta propietarios y compradores interesados en la compraventa de campos.",
+            "2Features": ["Registro y publicación de propiedades", "Chat interno entre usuarios", "Filtrado y paginación", "Descarga o solicitud de reportes", "Gestión de perfil", "Formulario estilo Typeform para solicitar campos"],
+            "3Title": "Portfolio para la agencia Wamnet. Sitio web informativo de una sola página con múltiples animaciones y transiciones fluidas.",
+            "3Features": ["Diseño moderno y atractivo", "Formulario de contacto", "Información dinámica"],
+            "4Title": "Sistema para control de afiliados de mutual. Permite dar de alta nuevos afiliados, editar su información y llevar control de los pagos realizados.",
+            "4Features": ["Usuarios con distintos roles y permisos", "Filtros y paginación", "Detección de vencimiento de cuota", "Exportar datos en Excel", "Envío de emails", "Formularios dinámicos"],
+            "5Title": "E-commerce dedicado a la compra de libros, ofreciendo una amplia variedad de títulos en diferentes géneros y autores, con descripciones detalladas y opciones de pago por transferencia y Mercadopago.",
+            "5Features": ["Sistema de búsqueda y autocompletado", "Carrito de compras", "Proceso de pago seguro", "Información dinámica", "Formulario de contacto"],
+            "6Title": "Sistema para realizar pedido de productos a producción en fábrica. Permite gestionar clientes, productos, stock y pedidos.",
+            "6Features": ["Usuarios con distintos roles y permisos", "Filtros y paginación", "Envío de pedidos de productos", "Revisión de pedidos por parte de administración antes de pasar a producción", "Manejo de múltiples variantes de stock", "Envío de emails", "Formularios dinámicos"],
+            "7Title": "Sitio web informativo que muestra las diferentes variantes de productos con descripciones detalladas, especificaciones en tablas e imágenes.",
+            "7Features": ["Diseño moderno y atractivo", "Formulario de contacto"],
+            "8Title": "Plataforma web que muestra las diferentes variantes de máquinas agrícolas para la compra y permite también poder enviar el modelo que se tiene para la venta para que sea cotizado y publicado.",
+            "8Features": ["Diseño moderno y atractivo", "Barra de búsqueda", "Filtros personalizados", "Formulario de envío de usado"],
+            "9Title": "E-commerce dedicado a la compra de productos tecnológicos ficticios, con descripciones detalladas y pasarela de pago Stripe.",
+            "9Features": ["Registro de usuarios con Google", "Filtro por categoría y paginación", "Carrito de compras", "Proceso de pago seguro", "Panel de administración"]
+        }
     },
     "services": {
         "title": "Servicios",
