fix: change services data

--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -15,7 +15,7 @@
         "aboutMe": "Acerca de mí",
         "who": "Quien soy :",
         "description": "Un admirador de la tecnología y programador entusiasta.",
-        "description2": "Me encuentro ubicado en Buenos Aires, Argentina. Tengo una gran pasión por crear sitios y aplicaciones web dinámicas y fáciles de usar. Cuento con habilidades de resolución de problemas y atención al detalle, capaz de solucionar y depurar problemas complejos, asegurando que los proyectos se entreguen a tiempo y con la máxima calidad. Soy un jugador de equipo y disfruto colaborar con otros para encontrar soluciones creativas a los desafíos.",
+        "description2": "Me encuentro ubicado en Buenos Aires, Argentina. Tengo una gran pasión por crear sitios y aplicaciones dinámicas y fáciles de usar. Cuento con habilidades de resolución de problemas y atención al detalle, capaz de solucionar y depurar problemas complejos, asegurando que los proyectos se entreguen a tiempo y con la máxima calidad. Soy un jugador de equipo y disfruto colaborar con otros para encontrar soluciones creativas a los desafíos.",
         "download": "Descargar CV",
         "skills": "Mis habilidades :"
     },
@@ -54,7 +54,7 @@
         "design-title": "Diseño Creativo",
         "design": "Un buen y atractivo diseño web lo ayuda a mantener sus potenciales clientes en su sitio, que es la cara digital de su negocio.",
         "develop-title": "Desarrollo",
-        "develop": "Sitios de fácil uso, con una interfaz intuitiva, y también dinámicos. Esto hará crecer las visitas y, a su vez, su negocio.",
+        "develop": "Me especializo en el desarrollo de sitios web, aplicaciones móviles y sistemas a medida.",
         "ecommerce-title": "Tienda Online",
         "ecommerce": "Puedo crear tiendas online totalmente funcionales donde el usuario pueda realizar transacciones.",
         "performance-title": "Rendimiento",
