--- a/src/translations/english/global.json
+++ b/src/translations/english/global.json
@@ -15,7 +15,7 @@
         "aboutMe": "About Me",
         "who": "Who Am I :",
         "description": "A tech fan and enthusiastic programmer.",
-        "description2": "I am located in Buenos Aires, Argentina. I have a great passion for creating and building dynamic and user-friendly websites and web applications. With my problem-solving skills and attention to detail, I'm able to troubleshoot and debug complex issues, ensuring that the projects are delivered on time and to the highest quality. I'm a team player and enjoy collaborating with others to find creative solutions to challenges.",
+        "description2": "I am located in Buenos Aires, Argentina. I have a great passion for creating and building dynamic and user-friendly websites and apps. With my problem-solving skills and attention to detail, I'm able to troubleshoot and debug complex issues, ensuring that the projects are delivered on time and to the highest quality. I'm a team player and enjoy collaborating with others to find creative solutions to challenges.",
         "download": "Download CV",
         "skills": "My skills :"
     },
@@ -54,7 +54,7 @@
         "design-title": "Creative Design",
         "design": "A good and attractive web design helps you keep your leads on your site, which is the digital face of your business.",
         "develop-title": "Development",
-        "develop": "Sites that are easy to use, with an intuitive interface, and also dynamic. This will grow visits and, in turn, your business.",
+        "develop": "I specialize in the development of websites, mobile applications and custom systems.",
         "ecommerce-title": "Ecommerce",
         "ecommerce": "I can create fully functional online stores where the user can make transactions.",
         "performance-title": "Performance",
