--- a/src/translations/english/global.json
+++ b/src/translations/english/global.json
@@ -42,8 +42,8 @@
             "7Features": ["Modern and attractive design", "Contact form"],
             "8Title": "Informative website showcasing different ice cream products, flavors, branches, history, and a contact form.",
             "8Features": ["Modern, attractive, and user-friendly design", "High-quality, eye-catching images of ice cream products and flavors", "Admin panel"],
-            "9Title": "E-commerce dedicated to the purchase of fictitious technological products, with detailed descriptions and Stripe payment gateway.",
-            "9Features": ["User registration with Google", "Filter by category and pagination", "Shopping cart", "Secure payment process", "Administration panel"]
+            "9Title": "Real estate web application that allows users to browse properties for sale and rent, apply filters, and contact the agent directly through an integrated contact form. Its intuitive, responsive design streamlines the search process and enhances the customer experience.",
+            "9Features": ["Modern and attractive design", "Filters and pagination", "Contact form", "Admin panel"]
         }
     },
     "services": {
